--- a/src/app/movie-detailed/movie-detailed.component.html
+++ b/src/app/movie-detailed/movie-detailed.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="movie">
-    <mat-card class="kartica" (click)="clicked()">
+    <mat-card class="kartica" >
     
     <mat-card-content >
         <div class="container">
