--- a/src/app/components/navigacija/navigacija.component.html
+++ b/src/app/components/navigacija/navigacija.component.html
@@ -3,7 +3,7 @@
         <a><span><mat-icon>movie</mat-icon> Filmovi</span></a>
         <div class="prazanProstor"></div>
          <a mat-button routerLink="browse-movies">Browse movies</a>
-         <a mat-button >Login</a>
+         <a mat-button routerLink="log-in">Login</a>
         <a mat-raised-button color="accent" routerLink="sign-up">Sign up</a>
     </mat-toolbar-row>
 </mat-toolbar>
