--- a/src/app/components/movie-detailed/movie-detailed.component.html
+++ b/src/app/components/movie-detailed/movie-detailed.component.html
@@ -12,6 +12,7 @@
        
     </mat-card-content>
     <mat-card-footer style="padding:10px ;">
+        <button mat-raised-button color="primary" (click)="dodajOmiljeni()">Dodaj u omiljene</button>
         <button mat-raised-button color="accent" (click)="openPopUp()" align="right">Pogledaj trailer</button>
         Ocena:{{_movie.ocena}} 
     </mat-card-footer> 
