--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -4,7 +4,7 @@
             <h3>Create a profile</h3>
         </mat-card-header>
     
-    <form [formGroup]="signupForm" (ngSubmit)="signUp()">
+    <form class="forma" [formGroup]="signupForm" (ngSubmit)="signUp()">
     <mat-card-content>
       <div class="unos">
         <mat-form-field>
