--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -1,1 +1,26 @@
-<p>log-in works!</p>
+<div class="sve">
+    <mat-card >
+        <mat-card-header>
+            <h3>Log into your profile</h3>
+        </mat-card-header>
+    
+    <form class="forma" [formGroup]="loginForm" (ngSubmit)="logIn()">
+    <mat-card-content>
+        <div class="unos">
+        <mat-form-field>
+            <mat-label>Unesite email</mat-label>
+            <input formControlName="email" #box1 matInput placeholder="Email" >
+          </mat-form-field>
+        </div>
+        <div class="unos">
+          <mat-form-field>
+            <mat-label>Unesite sifru</mat-label>
+            <input formControlName="password" #box2 matInput input type="password" placeholder="Password">
+          </mat-form-field>
+        </div>
+          <button mat-raised-button color="accent" type="submit">Log in</button>
+        
+    </mat-card-content>
+  </form>
+    </mat-card>
+</div>
