--- a/src/app/components/movie-detailed/movie-detailed.component.scss
+++ b/src/app/components/movie-detailed/movie-detailed.component.scss
@@ -43,3 +43,9 @@ mat-card-content{
     flex-direction: row;
     justify-content: space-evenly;
 }
+
+.reviews{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+} 
