--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -6,25 +6,41 @@
     
     <form class="forma" [formGroup]="signupForm" (ngSubmit)="signUp()">
     <mat-card-content>
+
       <div class="unos">
         <mat-form-field>
           <mat-label>Unesite korisnicko ime</mat-label>
           <input formControlName="username" #box3 matInput placeholder="Username">
         </mat-form-field>
+        <div *ngIf="signupForm.get('username')?.touched && !signupForm.get('username')?.valid">
+          <div *ngIf="signupForm.get('username')?.errors?.['required']">Password is required</div>
+        </div>
+        
       </div>
+
         <div class="unos">
         <mat-form-field>
             <mat-label>Unesite email</mat-label>
             <input formControlName="email" #box1 matInput placeholder="Email" >
           </mat-form-field>
+          <div *ngIf="signupForm.get('email')?.touched && !signupForm.get('email')?.valid">
+            <div *ngIf="signupForm.get('email')?.errors?.['required']">
+              Email is required
+            </div>
+            <div *ngIf="signupForm.get('email')?.errors?.['email']">Invalid email</div>
+          </div>
         </div>
+
         <div class="unos">
           <mat-form-field>
             <mat-label>Unesite sifru</mat-label>
             <input formControlName="password" #box2 matInput input type="password" placeholder="Password">
           </mat-form-field>
+          <div *ngIf="signupForm.get('password')?.touched && !signupForm.get('password')?.valid">
+            <div *ngIf="signupForm.get('password')?.errors?.['required']">Password is required</div>
+          </div>
         </div>
-          <button mat-raised-button color="accent" type="submit">Sign up</button>
+          <button mat-raised-button color="accent" type="submit" [disabled]="!signupForm.valid">Sign up</button>
         
     </mat-card-content>
   </form>
