--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -9,16 +9,28 @@
         <div class="unos">
         <mat-form-field>
             <mat-label>Unesite email</mat-label>
-            <input formControlName="email" #box1 matInput placeholder="Email" >
+            <input formControlName="email" id="email" #box1 matInput placeholder="Email" >
+            
           </mat-form-field>
+          <div *ngIf="loginForm.get('email')?.touched && !loginForm.get('email')?.valid">
+            <div *ngIf="form['email'].errors?.['required']">
+              Email is required
+            </div>
+            <div *ngIf="form['email'].errors?.['email']">Invalid email</div>
+          </div>
+          
         </div>
         <div class="unos">
           <mat-form-field>
             <mat-label>Unesite sifru</mat-label>
             <input formControlName="password" #box2 matInput input type="password" placeholder="Password">
           </mat-form-field>
+          <div *ngIf="loginForm.get('password')?.touched && !loginForm.get('password')?.valid">
+            <div *ngIf="loginForm.get('password')?.errors?.['required']">Password is required</div>
+          </div>
+          
         </div>
-          <button mat-raised-button color="accent" type="submit">Log in</button>
+          <button mat-raised-button color="accent" type="submit" [disabled]="!loginForm.valid">Log in</button>
         
     </mat-card-content>
   </form>
