--- a/src/app/components/navigacija/navigacija.component.html
+++ b/src/app/components/navigacija/navigacija.component.html
@@ -2,10 +2,11 @@
     <mat-toolbar-row>
         <a><span><mat-icon>movie</mat-icon> Filmovi</span></a>
         <div class="prazanProstor"></div>
+        <app-translate></app-translate>
         <a *ngIf="isAdmin()" mat-button routerLink="users">Users</a>
-         <a mat-button routerLink="browse-movies">Browse movies</a>
-         <a mat-button routerLink="profile" >Profile</a>
-         <a mat-button routerLink="log-in">Login</a>
-        <a mat-raised-button color="accent" routerLink="sign-up">Sign up</a>
+         <a mat-button routerLink="browse-movies">{{'NAV_BROWSE_MOVIES'|translate}}</a>
+         <a mat-button routerLink="profile" >{{'NAV_PROFILE'|translate}}</a>
+         <a mat-button routerLink="log-in">{{'NAV_LOGIN'|translate}}</a>
+        <a mat-raised-button color="accent" routerLink="sign-up">{{'NAV_SIGN_UP'|translate}}</a>
     </mat-toolbar-row>
 </mat-toolbar>
