--- a/src/app/features/movie/pop-up/pop-up.component.html
+++ b/src/app/features/movie/pop-up/pop-up.component.html
@@ -4,8 +4,6 @@
   [src]="videoUrl"
   title="YouTube video player"
   frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write;
-encrypted-media; gyroscope; picture-in-picture"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen
-></iframe
->x
+></iframe>
