--- a/src/app/features/shared/movie-thumb/movie-thumb.component.scss
+++ b/src/app/features/shared/movie-thumb/movie-thumb.component.scss
@@ -15,7 +15,7 @@
     padding: 10px;
 }
 
-.overlay{
+/* .overlay{
     position:absolute;
     top: 0;
     bottom: 0;
@@ -28,7 +28,7 @@
     background-color:#536DFE;
 
 
-  }
+  } */
 
   .text {
     color: white;
