--- a/src/app/features/movie/pages/browse-movies/browse-movies.component.html
+++ b/src/app/features/movie/pages/browse-movies/browse-movies.component.html
@@ -1,10 +1,7 @@
 <mat-grid-list cols="4" rowHeight="3:4">
   <ul *ngFor="let movie of movie$ | async">
     <mat-grid-tile>
-      <app-movie-thumb
-        [movie]="movie"
-        (onClick)="predstaviFilm(movie)"
-      ></app-movie-thumb
+      <app-movie-thumb [movie]="movie"></app-movie-thumb
     ></mat-grid-tile>
   </ul>
 </mat-grid-list>
