--- a/src/app/features/shared/movie-thumb/movie-thumb.component.html
+++ b/src/app/features/shared/movie-thumb/movie-thumb.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="movie">
-  <mat-card class="kartica" (click)="clicked()">
+  <mat-card class="kartica">
     <mat-card-content>
       <div class="container">
         <img mat-card-image src="{{ movie.poster }}" class="slika" />
